--- a/SCSS/_galMobile.scss
+++ b/SCSS/_galMobile.scss
@@ -1,7 +1,10 @@
-.columnasGaleria{
-    img{
-    padding:0px 2px;
-    width:100%;
-    height:100%;
+@import "variables";
+.contenidoGaleria{
+    margin:2.5% 2.5%;
+    .columnasGaleria{
+        img{
+        padding:0px 2px;
+        @include fullTamanio;
+        }
     }
 }
