--- a/SCSS/_generales.scss
+++ b/SCSS/_generales.scss
@@ -1,7 +1,7 @@
-@import "colores";
+@import "variables";
 
 body{
-    background-color:$fondoPags;
+    background-color:$cFondoPags;
     margin:0px;
     font-family: 'Josefin Sans', sans-serif;
     min-height: 100vh;
