--- a/SCSS/_home.scss
+++ b/SCSS/_home.scss
@@ -1,3 +1,5 @@
+@import "variables";
+
 .fondoIndex{
     background-image: url(../imagenes/imagenes_sitio/fondito.jpg);
     background-position: center;
@@ -16,8 +18,7 @@
         width: 60%;
         height: 14%;
         img{
-            width:100%;
-            height: 100%;
+            @include fullTamanio;
         }
     }
 }
