--- a/SCSS/_laptop.scss
+++ b/SCSS/_laptop.scss
@@ -1,3 +1,4 @@
+@import "variables";
 @media only screen and (min-width:1024px) and (max-width:1440px){
     .footer{
         overflow:hidden;
@@ -9,6 +10,9 @@
     .imgArriba{
        padding-top: 17%;
        height:80%;
+    }
+    .contenidoGaleria{
+        margin:1.5% 0.5%;
     }
     /*paginas hechas con GRID*/
     .contenedor__contacto{
