--- a/SCSS/_webshop.scss
+++ b/SCSS/_webshop.scss
@@ -1,12 +1,10 @@
-@import "colores";
+@import "variables";
 
 .navegable{
     height: 50px;
     padding:0px;
     .filtrosShop{
-        display: flex;
-        justify-content:center;
-        align-items: center;
+        @include flex-row-center-center;
         .estiloFiltro{
             padding:0px 30px;
             text-transform: uppercase;
@@ -47,16 +45,16 @@
             border-radius: 20px;
         }
         .descripcionProducto{
-            text-align: center;
+            @include textoCentro;
             text-transform: uppercase;
             text-decoration: underline;
-            font-style: italic;
+            font-style: map-get($estilosTexto,cursiva);
             font-weight: bold;
-            font-size: x-large;
+            font-size: map-get($estilosTexto,fuenteXdesktop);
             color:rgb(100, 2, 2);
         }
         .precioProducto{
-            font-size: x-large;
+            font-size: map-get($estilosTexto,fuenteXdesktop);
             font-weight: bold;
             color:black;
         }
