--- a/SCSS/_webshop.scss
+++ b/SCSS/_webshop.scss
@@ -26,6 +26,7 @@
 .contenidoShop{
     min-height: calc(100vh - 180px - 141px);
     justify-content: space-evenly;
+    margin-bottom: 7px;
     .columnasShop{
         background-color: rgba(46, 139, 86, 0.425);
         display: flex;
@@ -42,7 +43,6 @@
             height: 420px;
             margin:10px 100px;
             padding:0px 10px;
-            border-radius: 20px;
         }
         .descripcionProducto{
             @include textoCentro;
